--- a/_data/resume-objective.yml
+++ b/_data/resume-objective.yml
@@ -1,3 +1,3 @@
 - label: Objective
   category: Objectives
-  content: 'To continue providing ICT solution to better the community'
+  content: To analyze aspects of data and present insights to solve complex issues in our society
